change icon color on my reward page

--- a/app/views/investments/rewards.html.erb
+++ b/app/views/investments/rewards.html.erb
@@ -33,7 +33,7 @@
               <% if investment.reward_redeemed %>
               <i class="fas fa-check-circle" style="font-size: 24px; color: lightgrey;"></i>
               <% else %>
-              <i class="fas fa-gift text-success" style="font-size: 32px;"></i>
+              <i class="fas fa-gift icon-my-reward" style="font-size: 32px;"></i>
               <% end %>
             </div>
             <div class="column1 p-1">
