--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -35,11 +35,12 @@
 }
 
 .banner-title {
+  opacity: 0.9;
   color: black;
-  text-align: center;
+  text-align: left;
   font-size: 36px;
   font-weight: bold;
-  margin-bottom: 25px;
+  border-radius: 10px;
 }
 
 
