--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,3 +96,21 @@
 .fundeat-figures {
   box-shadow: 0 0px 6px rgba(0, 0, 0, 0.4);
 }
+
+.nav-link {
+  color: #00B63A;
+  border: 1px solid #00B63A;
+  -webkit-transition:all .2s;
+  -moz-transition:all .2s;
+  &:hover {
+    background-color: #00B63A;
+    color: white;
+    -webkit-transform: scale(0.95);
+    -moz-transform: scale(0.95);
+  }
+}
+
+.nav-pills .nav-link.active {
+  background-color: #00B63A;
+  color: white;
+}
