--- a/app/views/campaigns/raising.html.erb
+++ b/app/views/campaigns/raising.html.erb
@@ -1,9 +1,14 @@
   <div class="banner-campaign d-flex align-items-center justify-content-center">
-    <h3 class="banner-title">Raise today!</h3>
+    <h3 class="banner-title w-50 bg-light px-4 pt-4">
+      <blockquote class="blockquote">
+        <p class="mb-0">Crowfunding will become the future of how most small businesses are going to be financed.</p>
+        <footer class="blockquote-footer mt-3 text-right">Duncan Niederauer <cite title="Source Title">(former NYSE CEO)</cite></footer>
+      </blockquote>
+    </h3>
   </div>
 
   <div class="container mt-5">
-    <div class="d-flex justify-content-between">
+<!--     <div class="d-flex justify-content-between">
       <p class="text-center align-self-center"style="font-size:18px; width: 300px" >
         <em>"We're fanatical about supporting passionate founders and their teams who want to leave a mark on the world. We're supporting the visionaries whose purpose inspires belief from their colleagues, customers and communities, who want to fuel a brighter future. Whether you're a start-up or scale-up, foodie or techie, mover or shaker; we're right behind you."</em>
       </p>
@@ -18,7 +23,7 @@
 
     <div class="container">
       <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
-      </div>
+      </div> -->
 
 
       <div class="d-flex">
@@ -39,7 +44,7 @@
         </picture>
 
         <div class="d-flex flex-column align-self-center">
-          <div class="ml-4 mt-5 mb-2 d-flex align-items-center">
+          <div class="ml-4 mt-5 mb-2 d-flex align-items-top">
             <i class="fas fa-trophy icon-style"></i>
             <div class="d-flex flex-column">
               <h3>100+ Success Stories</h3>
@@ -48,7 +53,7 @@
           </div>
 
 
-        <div class="ml-4 my-2 d-flex align-items-center">
+          <div class="ml-4 my-2 d-flex align-items-top">
             <i class="fas fa-seedling icon-style"></i>
             <div class="d-flex flex-column">
               <h3>Grow your business</h3>
@@ -57,36 +62,35 @@
           </div>
 
 
-          <div class="ml-4 my-2 d-flex align-items-center">
+          <div class="ml-4 my-2 d-flex align-items-top">
             <i class="fas fa-people-carry icon-style"></i>
             <div class="d-flex flex-column">
               <h3>Guidance with every step</h3>
               <p>Our team of experts will help you create, grow and engage your community.</p>
             </div>
           </div>
-
         </div>
       </div>
 
       <!-- horizontal line -->
-      <div class="w-90 my-4 mx-auto" style="border: 1px solid lightgrey">
-      </div>
+      <!-- <div class="w-90 my-4 mx-auto mt-5" style="border: 1px solid lightgrey">
+      </div> -->
 
       <!-- <button class="btn btn-primary mx-5" id="menu-toggle"><small>Menu</small></button> -->
-      <div class="container">
+      <div class="m-0 mt-5 p-0 w-100" style="background-color: #f3f3f3;">
         <div class="row justify-content-center">
           <div class="col-12">
             <h1 class="mt-4 mb-3 text-center">Fuel your future</h1>
             <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
-              <li class="nav-item">
+              <li class="nav-item mx-3">
                 <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">What</a>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item mx-3">
                 <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Why</a>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item mx-3">
                 <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">How</a>
               </li>
             </ul>
@@ -99,7 +103,8 @@
                 <iframe width="650" height="350" style="border-radius: 20px" src="https://www.youtube.com/embed/bNpx7gpSqbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-                <iframe width="650" height="350" style="border-radius: 20px" src="https://www.youtube.com/embed/677ZtSMr4-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <!-- <iframe width="650" height="350" style="border-radius: 20px" src="https://www.youtube.com/embed/677ZtSMr4-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                <iframe width="650" height="350" style="border-radius: 20px" src="https://www.youtube.com/embed/Qsnap5Oh8S8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
 
             </div>
