--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,68 +18,12 @@
   </div>
 </div>
 <!-- <div class="row my-4 mx-auto" style="border: 1px solid lightgrey"></div> -->
-<div class="" style="background-color:rgb(243,243,243);">
-  <div class="row d-flex flex-wrap justify-content-center py-4" style="background-color:rgb(243,243,243);">
+<div class="container" style="margin-top: 90px;">
+  <div class="row">
 
     <% @campaigns.take(3).each do |campaign| %>
-    <%= link_to campaign_path(campaign), class: "wrapper-link" do %>
-
-    <div class="card-wrapper mt-5 pt-5">
-      <!-- investment card -->
-      <div class="card-investment">
-        <div class="card-user">
-          <img class="avatar-m-square" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
-        </div>
-        <!-- background pic -->
-        <!-- insert company.photo -->
-        <% if campaign.company.photo.attached? %>
-        <%= cl_image_tag campaign.company.photo.key, class: "card-pic"%>
-        <% else %>
-        <img class="card-pic" src="https://source.unsplash.com/1600x900/?food" class="card-img-top" alt="food-img">
-        <% end %>
-
-        <!-- <h5>10 days left</h5> -->
-        <h5><%= ((campaign.expiry_date - Time.now)/86400).round(0)%> days left</h5>
-
-        <h1><%= campaign.company.name %></h1>
-        <div style="height: 50px">
-          <p><%= campaign.title %></p>
-        </div>
-
-        <div class="box-align">
-          <h4>$ <%= number_with_delimiter(campaign.min_target, :delimiter => ',') %> target</h4>
-        </div>
-        <div class="target-bar">
-          <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
-          <% target = campaign.min_target %>
-          <% status = ((raised.to_f/target)*100).round(1) %>
-          <div>
-            <progress value="<%= status %>" max="100" id="progress-bar-percentage" class="progress-bar notfull">
-            </progress>
-          </div>
-          <div class="status"> <p><%= status %> %</p>
-          </div>
-        </div>
-        <div class="box-align d-flex justify-content-between">
-          <div class="text-center">
-            <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
-            <p>raised</p>
-          </div>
-          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-          </div>
-          <div class="text-center">
-            <h4><%= (campaign.return_rate*100).round(1) %>%</h4>
-            <p>interest</p>
-          </div>
-          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-          </div>
-          <div class="text-center">
-            <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
-            <p>investors</p>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= link_to campaign_path(campaign), class: "col-md-4 col-sm-6 wrapper-link" do %>
+      <%= render "campaigns/shared/card", campaign: campaign %>
     <% end %>
     <% end %>
   </div>
