--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/scooters/index.html.erb -->
 
-<div class="d-flex">
+<div class="d-flex mb-5">
 
   <div class="banner-index-left">
 
@@ -11,7 +11,7 @@
       <%= form_tag campaigns_path, method: :get do %>
       <%= text_field_tag :query,
       params[:query],
-      class: "search-form form-control, form-inline, text-center",
+      class: "search-form  text-center aligment-search ",
         placeholder: "Find a campaign", placeholder: "Enter category"
         %>
         <%= submit_tag "Search", class: "btn btn-dark" %>
@@ -23,113 +23,15 @@
   </div>
 
 
-  <div class="px-5 mx-2 d-flex flex-wrap justify-content-around">
+<div class="container">
+  <div class="row">
     <% @campaigns.each do |campaign| %>
-    <%= link_to campaign_path(campaign), class: "wrapper-link" do %>
-    <div class="card-wrapper">
-
-      <!-- investment card -->
-      <div class="card-investment">
-<style>
-
-  .spinner-position {
-    position: absolute;
-    top:9px;
-    right:9px;
-    background-color: rgba(209, 54, 27,0.8);
-    padding:0px;
-    border-radius:20px;
-    font-size: 40px;
-    color:white;
-  }
-
-
-</style>
-        <div class="card-user">
-          <% if campaign.company.type_store == "Restaurant" %>
-          <%= image_tag "restaurant.png", class:"avatar-m-square", alt: "avatar" %>
-          <% elsif campaign.company.type_store == "Bar" %>
-          <%= image_tag "bar.png", class:"avatar-m-square", alt: "avatar" %>
-          <% else %>
-          <%= image_tag "cafe.png", class:"avatar-m-square", alt: "avatar" %>
-          <% end %>
-
-        <% days_left = ((campaign.expiry_date - Time.now)/86400).round(0) %>
-        <% if days_left < 14 %>
-         <!--  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="hourglass-end" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="svg-inline--fa fa-hourglass-end fa-w-12 fa-spin fa-lg spinner-position"><path fill="currentColor" d="M360 64c13.255 0 24-10.745 24-24V24c0-13.255-10.745-24-24-24H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24 0 90.965 51.016 167.734 120.842 192C75.016 280.266 24 357.035 24 448c-13.255 0-24 10.745-24 24v16c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24v-16c0-13.255-10.745-24-24-24 0-90.965-51.016-167.734-120.842-192C308.984 231.734 360 154.965 360 64zM192 208c-57.787 0-104-66.518-104-144h208c0 77.945-46.51 144-104 144z" class=""></path></svg> -->
-
-        <%#= image_tag "clock.png", class:"spinner-position", alt: "avatar" %>
-        <i  class="far fa-clock spinner-position"></i>
-
-        <% else %>
-        <% end %>
-
-
-        </div>
-
-        <!-- background pic -->
-        <!-- insert company.photo -->
-        <% if campaign.company.photo.attached? %>
-        <%= cl_image_tag campaign.company.photo.key, class: "card-pic"%>
-        <% else %>
-        <img class="card-pic" src="https://source.unsplash.com/1600x900/?food" class="card-img-top" alt="food-img">
-        <% end %>
-
-        <% if days_left > 1 %>
-        <h5><span class="badge badge-open "> <%= days_left%> days left  </span></h5>
-        <% elsif days_left == 1 %>
-        <h5><span class="badge badge-open "> <%= days_left%> day left  </span></h5>
-        <%# elsif days_left = 1 %>
-        <!-- <h5><span class="badge badge-open "> <%= days_left%> day left  </span></h5> -->
-
-        <% else %>
-        <h5 class="pb-0"> <span class="badge badge-closed ">Funded </span></h5>
-        <% end %>
-        <h1 class="mt-0 font-weight-bold" ><%= campaign.company.name %>
-        </h1>
-        <p class="mb-3 tall"><%= campaign.description %>
-        </p>
-        <div class="box-align mb-3">
-          <h4>$ <%= number_with_delimiter(campaign.min_target, :delimiter => ',') %> target</h4>
-        </div>
-        <div class="target-bar mx-auto">
-          <% if Investment.where(campaign_id: campaign.id).sum("amount") != 0 %>
-          <% raised = Investment.where(campaign_id: campaign.id).sum("amount") %>
-          <% target = campaign.min_target %>
-          <% status = ((raised&.to_f/target)*100).round(0) %>
-          <% end %>
-          <div>
-            <progress value="<%= status %>" max="100" id="progress-bar-percentage" class="progress-bar notfull">
-            </progress>
-          </div>
-          <div class="statusbar-relative"> <p><%= status %> %</p>
-          </div>
-
-        </div>
-        <div class="box-align d-flex justify-content-between" id="cardkpisbottom">
-          <div class="text-center">
-            <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
-            <p>raised</p>
-          </div>
-          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-          </div>
-          <div class="text-center">
-            <h4><%= (campaign.return_rate*100).round(2) %>%</h4>
-            <p>interest</p>
-          </div>
-          <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
-          </div>
-          <div class="text-center">
-            <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
-            <p>investors</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <% end %>
+      <%= link_to campaign_path(campaign), class: "col-md-4 col-sm-6 wrapper-link" do %>
+        <%= render "campaigns/shared/card", campaign: campaign %>
+      <% end %>
     <% end %>
   </div>
-
+</div>
 
 
 
