--- a/app/views/campaigns/shared/_card.html.erb
+++ b/app/views/campaigns/shared/_card.html.erb
@@ -24,7 +24,7 @@
             <% end %>
 
             <% days_left = ((campaign.expiry_date - Time.now)/86400).round(0) %>
-            <% if days_left < 14 %>
+            <% if days_left < 14 && days_left >= 0 %>
             <i  class="far fa-clock spinner-position"></i>
 
             <% else %>
