--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+<div class="container-fluid p-0 mb-5">
   <!-- start of row1 -->
   <div class="position-relative">
     <div class="background-green pb-5 pt-3">
@@ -18,7 +18,7 @@
   </div>
 </div>
 <!-- <div class="row my-4 mx-auto" style="border: 1px solid lightgrey"></div> -->
-<div class="container" style="margin-top: 90px;">
+<div class="container" style="margin-top: 120px;">
   <div class="row">
 
     <% @campaigns.take(3).each do |campaign| %>
