--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -6,8 +6,8 @@
 
   </div>
   <div class="banner-index-center">
-    <div class="text-center d-flex flex-column justify-content-center h-100">
-      <h3 class="banner-title">Fund your favorite places</h3>
+    <div class="text-center d-flex flex-column justify-content-center h-100" >
+      <h3 class="banner-title" style="text-align:center;">Fund your favorite places</h3>
       <%= form_tag campaigns_path, method: :get do %>
       <%= text_field_tag :query,
       params[:query],
