--- a/app/views/campaigns/shared/_card.html.erb
+++ b/app/views/campaigns/shared/_card.html.erb
@@ -1,18 +1,6 @@
         <!-- investment card -->
         <div class="card-investment mb-5">
           <style>
-
-            .spinner-position {
-              position: absolute;
-              top:9px;
-              right:9px;
-              background-color: rgba(209, 54, 27,0.8);
-              padding:0px;
-              border-radius:20px;
-              font-size: 40px;
-              color:white;
-            }
-
           </style>
           <div class="card-user">
             <% if campaign.company.type_store == "Restaurant" %>
@@ -24,7 +12,7 @@
             <% end %>
 
             <% days_left = ((campaign.expiry_date - Time.now)/86400).round(0) %>
-            <% if days_left < 14 && days_left >= 0 %>
+            <% if days_left < 5 && days_left >= 0 %>
             <i  class="far fa-clock spinner-position"></i>
 
             <% else %>
@@ -40,13 +28,16 @@
             <img class="card-pic" src="https://source.unsplash.com/1600x900/?food" class="card-img-top" alt="food-img">
           <% end %>
           <div class="card-investment-body">
-          <% if days_left > 1 %>
+          <% if days_left > 5 %>
             <h5><span class="badge badge-open "> <%= days_left%> days left  </span></h5>
+          <% elsif days_left <= 5 && days_left > 1  %>
+            <h5><span class="badge badge-hour "> <%= days_left%> days left  </span></h5>
           <% elsif days_left == 1 %>
-            <h5><span class="badge badge-open "> <%= days_left%> day left  </span></h5>
+            <h5><span class="badge badge-hour "> <%= days_left%> day left  </span></h5>
           <%# elsif days_left = 1 %>
           <!-- <h5><span class="badge badge-open "> <%= days_left%> day left  </span></h5> -->
-
+            <% elsif days_left == 0 %>
+            <h5><span class="badge badge-hour "> <%= (((campaign.expiry_date - DateTime.current)/(24*3600)).round(2).to_s.split(".").last.to_i * 0.24).round(0) %> hours left  </span></h5>
           <% else %>
           <h5 class="pb-0"> <span class="badge badge-closed ">Funded </span></h5>
           <% end %>
@@ -71,22 +62,22 @@
             </div>
 
           </div>
-          <div class="box-align d-flex justify-content-between" id="cardkpisbottom">
+          <div class="box-align d-flex justify-content-between px-3" id="cardkpisbottom">
             <div class="text-center">
-              <h4>$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
-              <p>raised</p>
+              <h4 class="text-center">$ <%= number_with_delimiter(Investment.where(campaign_id: campaign.id).sum("amount"), :delimiter => ',') %></h4>
+              <p class="text-center">raised</p>
             </div>
             <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
             </div>
             <div class="text-center">
-              <h4><%= (campaign.return_rate*100).round(2) %>%</h4>
-              <p>interest</p>
+              <h4 class="text-center"><%= (campaign.return_rate*100).round(2) %>%</h4>
+              <p class="text-center">interest</p>
             </div>
             <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
             </div>
             <div class="text-center">
-              <h4><%= Investment.where(campaign_id: campaign.id).count%></h4>
-              <p>investors</p>
+              <h4 class="text-center"><%= Investment.where(campaign_id: campaign.id).count%></h4>
+              <p class="text-center">investors</p>
             </div>
           </div>
 
