--- a/app/assets/stylesheets/components/_card-investment.scss
+++ b/app/assets/stylesheets/components/_card-investment.scss
@@ -151,3 +151,24 @@ progress[value]::-webkit-progress-bar {
       font-size: 40px;
       color:white;
             }
+
+.page-closed-investment-position {
+      position: absolute;
+      top:0px;
+      right:-350px;
+      background-color: rgba(255, 255, 255,0.9);
+      padding:0px;
+      border-radius:20px;
+      height:120px;
+      font-size: 40px;
+      color:white;
+      z-index: 200000;
+            }
+
+.closed-investment-position {
+
+      height:50px;
+
+      color:white;
+      z-index: 20;
+            }
