--- a/app/assets/stylesheets/components/_card-investment-summary.scss
+++ b/app/assets/stylesheets/components/_card-investment-summary.scss
@@ -12,13 +12,14 @@
 }
 
 .card-investment-summary h2 {
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 28px;
+  // font-weight: bold;
+  opacity: .9;
   margin: 0;
 }
 
 .card-investment-summary p {
-  font-size: 12px;
+  font-size: 20px;
   opacity: .7;
   margin: 0;
 }
@@ -33,36 +34,36 @@
 
 // card for my bookings
 
-.card-product.booking {
-  overflow: hidden;
-  height: 120px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex;
-  align-items: center;
-  margin: 20px;
-}
+// .card-product.booking {
+//   overflow: hidden;
+//   height: 120px;
+//   background: white;
+//   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+//   display: flex;
+//   align-items: center;
+//   margin: 20px;
+// }
 
-.card-product.booking.card-product img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
-}
+// .card-product.booking.card-product img {
+//   height: 100%;
+//   width: 120px;
+//   object-fit: cover;
+// }
 
-.card-product-info.scooter {
-  width: 100%;
-}
+// .card-product-info.scooter {
+//   width: 100%;
+// }
 
-.card-product-info.scooter h1 {
-  font-size: 20px;
-  margin: 0;
-}
+// .card-product-info.scooter h1 {
+//   font-size: 20px;
+//   margin: 0;
+// }
 
-.card.scale{
-  transform: scale(1, 1);
-  transition: transform 0.5s ease;
-}
-.card:hover.scale {
-  box-shadow: 0 0 24px rgba(33,33,33,.7);
-  transform: scale(1.1, 1.1);
-}
+// .card.scale{
+//   transform: scale(1, 1);
+//   transition: transform 0.5s ease;
+// }
+// .card:hover.scale {
+//   box-shadow: 0 0 24px rgba(33,33,33,.7);
+//   transform: scale(1.1, 1.1);
+// }
