--- a/app/views/pages/_hometext.html.erb
+++ b/app/views/pages/_hometext.html.erb
@@ -7,9 +7,9 @@
       <h6 class="my-5 pr-5 text-secondary">Fundeat enables Restaurants to easily raise money and gives private investors the opportunity to sustainably invest in their local community</h6>
     </div>
     <div class="d-flex">
-      <a><%= link_to "Start investing", "/campaigns", class: "btn route-button-full px-4 py-2 mr-3" %></a>
+      <a><%= link_to "Start investing", "/campaigns", class: "btn route-button-full px-4 py-2 mr-3", style:"font-size: 20px;" %></a>
 
-      <a><%= link_to "Start raising", "/raising", class: "btn route-button-outline px-4 py-2" %></a>
+      <a><%= link_to "Start raising", "/raising", class: "btn route-button-outline px-4 py-2", style:"font-size: 20px;" %></a>
     </div>
   </div>
 </div>
