--- a/app/views/investments/_info_window.html.erb
+++ b/app/views/investments/_info_window.html.erb
@@ -2,5 +2,5 @@
 <span>
   <%#= cl_image_tag investment.campaign.photo.key, style:"height: 150px; width: 100%; object-fit: cover;", class:"card-img-top :width=>70 :height=>20 :crop=>'scale' z"%>
 </span>
-<h5 class="mt-3">$ <%= investment.amount %></h5>
+<h6 class="mt-3">Invested: $ <%= investment.amount %></h6>
 
