--- a/app/views/investments/map.html.erb
+++ b/app/views/investments/map.html.erb
@@ -7,12 +7,10 @@
 
     <div class="col-lg-10 p-0">
 
-      <h3> Your funded places map: </h3>
-
-      <div class="d-flex justify-content-center my-5">
+      <h3 class="my-4">Map of your investments</h3>
+      <div class="d-flex pr-4">
         <div id="mapbox" class="rounded" style="width: 100%; height: 60vh;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
       </div>
-
     </div>
   </div>
 </div>
