--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -38,62 +38,63 @@
 
       <!-- map  -->
       <div class="d-flex justify-content-center my-5">
-        <div id="mapbox" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-      </div>
-    </div>
-
-    <div class="col-12 col-lg-4" id="sidebar">
-      <!-- investment card -->
-      <div class="position-stickty-top-90-right">
-        <div id="card-fixed" class="mx-sm-auto">
-
-          <div class="card-investment-play bg-lightgreen p-4 m-0 card-campaign-status">
-            <!-- invest field and button -->
-            <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
-            <div class="form-input d-flex justify-space-between align-items-center mb-4">
-              <%= f.input :amount, class: "input-field", placeholder: "$ 250", label: false, :required => true,  :input_html => { :type => "number" } %>
-              <% if !current_user.nil? && current_user.owner? %>
-                <p class="text-center small m-0 p-2"><em>Create investor account</em></p>
-              <% else %>
-                <%= f.submit "Invest", class: "btn btn-success px-5", style:"margin-left: 16px;" %>
-              <% end %>
-            </div>
-            <% end %>
-
-            <!-- campaign stats -->
-            <%= render "shared/investment_terms", campaign: @campaign %>
-
-            <div class="d-flex flex-column justify-content-between">
-              <!-- range slider  -->
-              <form>
-                <div class="investment-slider">
-                  <label for="investmentRange" style="margin: 0; font-size: 12px;">Investment</label>
-                  <input type="range" class="investment-range w-100" min="20" max="5000" step="10" id="investmentRange">
-                </div>
-              </form>
-            </div>
-
-            <!-- return section -->
-            <%= render "shared/return_calculation", campaign: @campaign %>
-
-            <!-- rewards section -->
-            <div class="mt-4">
-              <h5 style="font-size: 12px;">My reward</h5>
-              <% @campaign.rewards.each_with_index do |reward, index| %>
-                <div id="reward-<%= index %>" class="d-flex align-items-center px-3 py-1 mt-2 reward" style="border-radius: 50px;" data-amount="<%= reward.investment_amount %>">
-                  <!-- <input type="hidden" id="reward-threshold-<%= index %>" > -->
-                  <i class="fas fa-gift"></i>
-                  <p class="m-0 ml-4" id="investment_reward"><%= reward.description %></p>
-                </div>
-              <% end %>
-            </div>
-
-          </div>
-        </div>
-        <!-- investment card closing div -->
+        <div id="mapbox" class="rounded" style="width: 100%; height: 40vh;" data-markers="<%= @marker.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
       </div>
     </div>
   </div>
+
+  <div class="col-12 col-lg-4" id="sidebar">
+    <!-- investment card -->
+    <div class="position-stickty-top-90-right">
+      <div id="card-fixed" class="mx-sm-auto">
+
+        <div class="card-investment-play bg-lightgreen p-4 m-0 card-campaign-status">
+          <!-- invest field and button -->
+          <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
+          <div class="form-input d-flex justify-space-between align-items-center mb-4">
+            <%= f.input :amount, class: "input-field", placeholder: "$ 250", label: false, :required => true,  :input_html => { :type => "number" } %>
+            <% if !current_user.nil? && current_user.owner? %>
+            <p class="text-center small m-0 p-2"><em>Create investor account</em></p>
+            <% else %>
+            <%= f.submit "Invest", class: "btn btn-success px-5", style:"margin-left: 16px;" %>
+            <% end %>
+          </div>
+          <% end %>
+
+          <!-- campaign stats -->
+          <%= render "shared/investment_terms", campaign: @campaign %>
+
+          <div class="d-flex flex-column justify-content-between">
+            <!-- range slider  -->
+            <form>
+              <div class="investment-slider">
+                <label for="investmentRange" style="margin: 0; font-size: 12px;">Investment</label>
+                <input type="range" class="investment-range w-100" min="20" max="5000" step="10" id="investmentRange">
+              </div>
+            </form>
+          </div>
+
+          <!-- return section -->
+          <%= render "shared/return_calculation", campaign: @campaign %>
+
+          <!-- rewards section -->
+          <div class="mt-4">
+            <h5 style="font-size: 12px;">My reward</h5>
+            <% @campaign.rewards.each_with_index do |reward, index| %>
+            <div id="reward-<%= index %>" class="d-flex align-items-center px-3 py-1 mt-2 reward" style="border-radius: 50px;" data-amount="<%= reward.investment_amount %>">
+              <!-- <input type="hidden" id="reward-threshold-<%= index %>" > -->
+              <i class="fas fa-gift"></i>
+              <p class="m-0 ml-4" id="investment_reward"><%= reward.description %></p>
+            </div>
+            <% end %>
+          </div>
+
+        </div>
+      </div>
+      <!-- investment card closing div -->
+    </div>
+  </div>
+</div>
 </div>
 </div>
 </div>
