--- a/app/views/investments/confirmation.html.erb
+++ b/app/views/investments/confirmation.html.erb
@@ -1,25 +1,24 @@
-<div class="container">
 
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-    <div class="col-md-5 p-lg-5 mx-auto my-5">
-      <h1 class="display-4 font-weight-normal">Investment Confirmed!</h1>
-      <p class="lead font-weight-normal">Company X</p>
-      <p>thanks you for your support</p>
-      <%= link_to "Dashboard", investors_dashboard_path, class: "btn btn-outline-secondary"  %>
-    </div>
-    <div class="product-device shadow-sm d-none d-md-block"></div>
-    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+
+<div class="text-white container vh-100">
+
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark" style="border-radius: 10px">
+      <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">Investment Confirmed!</h1>
+        <p class="lead font-weight-normal"> <%= @investment.company.name %></p>
+        <p>Thanks you for your support!</p>
+        <%= link_to "Dashboard", investors_dashboard_path, class: "btn route-button-full btn-lg "  %>
+      </div>
+      <div class="product-device shadow-sm d-none d-md-block"></div>
+      <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+
+      <p class="lead font-weight-bold">The campaign closes in...</p>
+
+      <div class="countdown" data-date="<%= @investment.campaign.expiry_date.strftime("%d-%m-%Y") %>" data-time="00:00">
+        <div class="day"><span class="num"></span><span class="word"></span></div>
+        <div class="hour"><span class="num"></span><span class="word"></span></div>
+        <div class="min"><span class="num"></span><span class="word"></span></div>
+        <div class="sec"><span class="num"></span><span class="word"></span></div>
+      </div>
   </div>
-
-
-</div>
-
-
-<%= @investment.company.name %>
-
-<div class="countdown" data-date="<%= @investment.campaign.expiry_date.strftime("%d-%m-%Y") %>" data-time="00:00">
-  <div class="day"><span class="num"></span><span class="word"></span></div>
-  <div class="hour"><span class="num"></span><span class="word"></span></div>
-  <div class="min"><span class="num"></span><span class="word"></span></div>
-  <div class="sec"><span class="num"></span><span class="word"></span></div>
 </div>
