Fixing nil payment error & rounding error

--- a/app/views/campaigns/owners_dashboard.html.erb
+++ b/app/views/campaigns/owners_dashboard.html.erb
@@ -8,7 +8,7 @@
 
     <div class="text-center mt-5">
       <h4>Campaign dashboard for <strong><%= @company.name%> </gstrong></h4>
-        <%= link_to "See your campagin live", campaign_path(@company.campaign),  class: "mt-4 btn btn-outline-success"%>
+        <%= link_to "See your campaign live", campaign_path(@company.campaign),  class: "mt-4 btn btn-outline-success"%>
       </div>
 
       <div class="container">
