--- a/app/views/campaigns/shared/_form.html.erb
+++ b/app/views/campaigns/shared/_form.html.erb
@@ -214,7 +214,7 @@
 
         <div class="d-flex justify-content-center">
           <!-- <button class="btn btn-outline-secondary" type="submit">Back</button> -->
-          <button type="submit" name="commit" class="btn btn btn-secondary" data-disable-with="Create Campaign">Create Campagin</button>
+          <button type="submit" name="commit" class="btn btn btn-secondary" data-disable-with="Create Campaign">Create Campaign</button>
         </div>
 
       </div>
