--- a/app/views/investments/dashboard.html.erb
+++ b/app/views/investments/dashboard.html.erb
@@ -38,7 +38,7 @@
                   <div class="card-campaign-status kpibox kpibox-green m-4">
                     <div class="d-flex mt-4 justify-content-around align-items-center">
                       <div class="text-center">
-                        <h2 class="m-3 kpidash"><%= @avge_int_rate*100.round(0)%>% </h2>
+                        <h2 class="m-3 kpidash"><%= (@avge_int_rate*100).round(1)%>% </h2>
                         <h2 class="text-secondary mb-2" style="font-size: 20px;">Avg. Return</h2>
                       </div>
                     </div>
