--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 
 .banner-index-right {
   background-image: url("https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/2d72424dcc82f116a7d8850d1f44ec09.svg");
-  background-color: #F4FCDE;
+  background-color: $light-green;
   background-position: right;
   background-repeat: no-repeat;
   background-size: cover;
@@ -11,7 +11,7 @@
 
 .banner-index-left {
   background-image: url("https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/317b14d7b051b7e496c9f1ba4db156b4.svg");
-  background-color: #F4FCDE;
+  background-color: $light-green;
   background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
@@ -20,14 +20,14 @@
 }
 
 .banner-index-center {
-  background-color: #F4FCDE;
+  background-color: $light-green;
   height: 300px;
   width: 40%;
 }
 
 .banner-campaign {
   // background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url("https://images.unsplash.com/photo-1525648199074-cee30ba79a4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
-  background-image: url("fundeat-bg.png");
+  background-image: url("bg-green.png");
   background-position: top;
   width: 100%;
   height: 300px;
